Resolve boxwithonlybackground component overflow issue on desktop

--- a/src/styles/boxWithOnlyBackground.module.scss
+++ b/src/styles/boxWithOnlyBackground.module.scss
@@ -6,3 +6,10 @@
     display: block;
   }
 }
+
+@media screen and (min-width: 1000px) {
+  .img-container {
+    width: 100%;
+  }
+  
+}
